--- a/dotnet-api/argocd-apps/configuration/${{values.name}}/deployment.yaml
+++ b/dotnet-api/argocd-apps/configuration/${{values.name}}/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app: ${{values.name}}
     spec:
       containers:
-      - image: ghcr.io/${{__GITHUB_ORG__}}/${{values.name}}
+      - image: ghcr.io/qwiklabs-gcp-03-064bcea0f201/${{values.name}}
         name: ${{values.name}}
         imagePullPolicy: Always
         ports:
