--- a/dotnet-api/argocd-apps/configuration/${{values.name}}/ingress.yaml
+++ b/dotnet-api/argocd-apps/configuration/${{values.name}}/ingress.yaml
@@ -10,10 +10,10 @@ spec:
   ingressClassName: "nginx"
   tls:
     - hosts:
-      - ${{values.name}}.${{__GITHUB_ORG__}}.ohmyplatform.com
+      - ${{values.name}}.qwiklabs-gcp-03-064bcea0f201.ohmyplatform.com
       secretName: ${{values.name}}-tls
   rules:
-    - host: ${{values.name}}.${{__GITHUB_ORG__}}.ohmyplatform.com
+    - host: ${{values.name}}.qwiklabs-gcp-03-064bcea0f201.ohmyplatform.com
       http:
         paths:
           - path: /
